Refactor styles using SASS

--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Macaroons</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/adaptive.css">
-    <link rel="stylesheet" href="css/loader.css">
+    <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
+    <link rel="stylesheet" href="public/main.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -18,7 +16,7 @@
                 <a class="logo__link" href="#">macaroons</a>
             </div>
             <nav class="menu" id="menu">
-                <div class="hidden">
+                <div class="menu-close">
                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
                          width="50" height="50"
                          viewBox="0 0 50 50">
