Update project structure

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="hero__image">
-                <img src="images/main-macaroons.png" alt="Макаруны разных видов" class="hero__image-img">
+                <img src="public/images/main-macaroons.png" alt="Макаруны разных видов" class="hero__image-img">
                 <div class="image__animation-circle1"></div>
                 <div class="image__animation-circle2"></div>
             </div>
@@ -66,7 +66,7 @@
                     маргарина, разрыхлителей и улучшителей муки.</p>
             </div>
             <div class="about__image">
-                <img src="images/macaroon-king-size.png" alt="Макарун крупным планом" class="about__image-img">
+                <img src="public/images/macaroon-king-size.png" alt="Макарун крупным планом" class="about__image-img">
             </div>
         </div>
         <div class="about__benefits">
@@ -113,7 +113,7 @@
         <div class="choose__catalog">
             <div class="catalog__item">
                 <div class="item__image">
-                    <img src="images/catalog/1.png" alt="Макарун с малиной" class="item__image-img">
+                    <img src="public/images/catalog/1.png" alt="Макарун с малиной" class="item__image-img">
                 </div>
                 <h3 class="item__title">Макарун с малиной</h3>
                 <div class="item__additional">
@@ -128,7 +128,7 @@
             </div>
             <div class="catalog__item">
                 <div class="item__image">
-                    <img src="images/catalog/2.png" alt="Макарун с манго" class="item__image-img">
+                    <img src="public/images/catalog/2.png" alt="Макарун с манго" class="item__image-img">
                 </div>
                 <h3 class="item__title">Макарун с манго</h3>
                 <div class="item__additional">
@@ -143,7 +143,7 @@
             </div>
             <div class="catalog__item">
                 <div class="item__image">
-                    <img src="images/catalog/3.png" alt="Пирог с ванилью" class="item__image-img">
+                    <img src="public/images/catalog/3.png" alt="Пирог с ванилью" class="item__image-img">
                 </div>
                 <h3 class="item__title">Пирог с ванилью</h3>
                 <div class="item__additional">
@@ -158,7 +158,7 @@
             </div>
             <div class="catalog__item">
                 <div class="item__image">
-                    <img src="images/catalog/4.png" alt="Пирог с фисташками" class="item__image-img">
+                    <img src="public/images/catalog/4.png" alt="Пирог с фисташками" class="item__image-img">
                 </div>
                 <h3 class="item__title">Пирог с фисташками</h3>
                 <div class="item__additional">
@@ -179,9 +179,9 @@
     <div class="container order__container">
         <div class="order__image">
             <div class="strawberry-image strawberry_left">
-                <img src="images/strawberry1.png" alt="Клубника" class="strawberry_left-img">
+                <img src="public/images/strawberry1.png" alt="Клубника" class="strawberry_left-img">
             </div>
-            <img src="images/order-macaroon.png" alt="Закажи макарун!" class="order__image-img"></div>
+            <img src="public/images/order-macaroon.png" alt="Закажи макарун!" class="order__image-img"></div>
         <div class="order__info" id="formInfo">
             <h2 class="order__title">Закажите макарун!</h2>
             <p class="order__description">Выберите понравившийся макарун, заполните форму и ожидайте звонка нашего
@@ -211,14 +211,14 @@
                 </div>
             </form>
             <div class="strawberry-image strawberry_right">
-                <img src="images/strawberry2.png" alt="Клубника">
+                <img src="public/images/strawberry2.png" alt="Клубника">
             </div>
         </div>
         <div class="order__info" id="thanksInfo">
             <h2 class="order__title">Спасибо за Ваш заказ</h2>
             <p class="order__description">Мы скоро свяжемся с Вами!</p>
             <div class="strawberry-image strawberry_right">
-                <img src="images/strawberry2.png" alt="Клубника">
+                <img src="public/images/strawberry2.png" alt="Клубника">
             </div>
         </div>
     </div>
@@ -258,7 +258,7 @@
     </div>
     <button class="gift__circle">
         <span class="circle__icon">
-            <img src="images/present.png" alt="Подарок">
+            <img src="public/images/present.png" alt="Подарок">
         </span>
     </button>
 </div>
@@ -279,6 +279,6 @@
     })
 </script>
 <script src="node_modules/jquery/dist/jquery.min.js"></script>
-<script src="scripts/main.js"></script>
+<script src="public/scripts/main.js"></script>
 </body>
 </html>
